     [compress.c]
     mem leak; chombier@mac.com
   - markus@cvs.openbsd.org 2001/09/27 11:59:37
     [packet.c]
     missing called=1; chombier@mac.com
   - markus@cvs.openbsd.org 2001/09/27 15:31:17
     [auth2.c auth2-chall.c sshconnect1.c]
     typos; from solar
   - camield@cvs.openbsd.org 2001/09/27 17:53:24
     [sshd.8]
     don't talk about compile-time options
     ok markus@

20011001
 - (stevesk) loginrec.c: fix type conversion problems exposed when using
   64-bit off_t.
	
20010929
 - (bal) move reading 'config.h' up higher.  Patch by albert chin
   <china@thewrittenword.com)

20010928
 - (djm) OpenBSD CVS sync:
   - djm@cvs.openbsd.org 2001/09/28 09:49:31
     [scard.c]
     Fix segv when smartcard communication error occurs during key load. 
     ok markus@
 - (djm) Update spec files for new x11-askpass

20010927
 - (stevesk) session.c: declare do_pre_login() before use
   wayned@users.sourceforge.net

20010925
 - (djm) Pull in auth-krb5.c from OpenBSD CVS. NB. it is not currently used.
 - (djm) Sync $sysconfdir/moduli
 - (djm) Add AC_SYS_LARGEFILE configure test
 - (djm) Avoid bad and unportable sprintf usage in compat code

20010923
 - (bal) updated ssh.c to mirror minor getopts 'extern int' formating done
   by stevesk@
 - (bal) Removed 'extern int optopt;' since it is dead wood.
 - (bal) Updated all *.specs for 2.9.9p1 and updated version.h

20010923
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/09/23 11:09:13
     [authfile.c]
     relax permission check for private key files.
   - markus@cvs.openbsd.org 2001/09/23 09:58:13
     [LICENCE]
     new rijndael implementation

20010920
 - (tim) [scard/Makefile.in] Don't strip the Java binary
 - (stevesk) sun_len, SUN_LEN() configure stuff no longer required
 - (bal) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2001/09/20 00:15:54
     [sshd.8]
     fix ClientAliveCountMax
   - markus@cvs.openbsd.org 2001/09/20 13:46:48
     [auth2.c]
     key_read returns now -1 or 1